Update ExpoCell contentItem position whenever ExpoCell moves

Currently it was only updated whenever the geometry of ExpoCell
changed; this ensures the position is updated even if a parent of
ExpoCell moves.

BUG:493708